# ex3

./: BinaryExpression.cpp  BinaryExpression.h  CMakeLists.txt  Client.cpp  Client.h  Command.h  CommandExpression.cpp  CommandExpression.h  CommandsMap.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  DefineVarCommand.cpp  DefineVarCommand.h  Div.cpp  Div.h  Expression.cpp  Expression.h  IfCommand.cpp  IfCommand.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  LoopCommand.cpp  LoopCommand.h  Main.cpp  Minus.cpp  Minus.h  Mult.cpp  Mult.h  OpenServerCommand.cpp  OpenServerCommand.h  Plus.cpp  Plus.h  PrintCommand.cpp  PrintCommand.h  Server.cpp  Server.h  (+11 more)
